--- a/src/main/resources/templates/createRoom.html
+++ b/src/main/resources/templates/createRoom.html
@@ -9,11 +9,14 @@
 <input type="text" id="participantsInput" placeholder="참여자"><br>
 <button onclick="createChatRoom()">채팅방 생성</button>
 </body>
-<script>
-    import { collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-firestore.js";
-    import { db } from './firebase-config.js';
+<script type="module">
+    import { db } from './js/firebase-config.js';
+    import { collection, addDoc, query, orderBy, onSnapshot, serverTimestamp }
+        from "https://www.gstatic.com/firebasejs/11.2.0/firebase-firestore.js";
 
-    async function createChatRoom() {
+    const currentUser = sessionStorage.getItem("username");
+
+    window.createChatRoom = async function() {
         const roomName = document.getElementById('roomNameInput').value;
         const participantsStr = document.getElementById('participantsInput').value;
 
@@ -47,7 +50,7 @@
 
             console.log("채팅방 생성 성공, ID:", docRef.id);
             alert("채팅방이 생성되었습니다!");
-            window.location.href = `/chatRoom.html?roomId=${docRef.id}`;
+            window.location.href = `/chat/${docRef.id}
         } catch (error) {
             console.error("채팅방 생성 중 오류 발생:", error);
         }
