--- a/src/main/resources/templates/createRoom.html
+++ b/src/main/resources/templates/createRoom.html
@@ -10,7 +10,7 @@
 <button onclick="createChatRoom()">채팅방 생성</button>
 </body>
 <script type="module">
-    import { db } from './js/firebase-config.js';
+    import { db } from '/js/firebase-config.js';
     import { collection, addDoc, query, orderBy, onSnapshot, serverTimestamp }
         from "https://www.gstatic.com/firebasejs/11.2.0/firebase-firestore.js";
 
