--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,7 +36,7 @@
       sessionStorage.setItem('username', username);
 
       // 채팅 페이지로 리다이렉트
-      window.location.href = '/myChat-list.html';
+      window.location.href = '/myChat';
     } catch (error) {
       alert(error.response?.data || '로그인 실패 : '+error);
     }
